# mamba3-hands-on

./: .gitignore  .mcp.json  ACTIVE.md  ARCHITECTURE.md  CORTEX_HANDOFF.md  MAC_LAYOUT.md  Makefile  PLAN.md  PTX_ENGINE.md  README.md  REPAIRS.md  THREE_POPULATIONS.md  VISION.md  _test_copy_inference.py  _test_optimal_move.py  all_validate.py  amplify.py  analyze.py  analyze_role_errors.py  assistant.py  audit_db.py  auto_tuner.py  batch_writer.py  bubble_step_function.py  check_eos.py  check_task_history.py  check_winning_configs.py  ckpt_bridge.py  cloud_archive.py  cloud_archive_daemon.py  cluster_dispatch.py  cluster_sync.py  compose_logic_gate.py  conway_speed_showdown.py  coordinator.py  cornell_3d.py  cornell_3d_sh.py  cornell_pathtrace_showdown.py  cortex_counting.py  crack_mod3_v2.py  (+136 more)
01_ga_tournament/: auto_tuner.py  crack_mod3.py  distill_from_router.py  fish_validate.py  grokking.py  sort_suite.py  three_populations.py  train_bootstrap.py  train_router.py
03_synapse_parity/: parity_experiment.py
04_hanoi/: README.md  analyze_hanoi_errors.py  analyze_repeat_count.py  discover_hanoi_aggregates_plain.py  discover_hanoi_mamba.py  hanoi_exec_validate.py  hanoi_solve_gru.py  hanoi_tool.py  hanoi_tool_validate.py  train_hanoi_exec.py
05_lego_library/: README.md  cornell_3d.py  cornell_3d_sh.py  discover_gcd_step.py  exp_universal_step.py  gcd_step_function.py
07_jepa/: cerebras_corpus.py  eval_daemon.py  findings.md  train.py
08_rlf_cortex/: checkpoint.py  eval_daemon.py  findings.md
09_cortex_bilingual/: README.md
10_jepa_structured/: README.md  budget.py  curriculum.py  curriculum_expander.py  gen_textbook.py  orchestrator.py  probe_prompt_cache.py  probe_prompt_cache_burst.py  probe_prompt_cache_converse.py  storage_packer.py  tile_gen.py
10_jepa_structured/data/: textbook_smoke.jsonl
cli/: __init__.py  main.py
cortex_bilingual/: README.md  demo_cortex.py  findings.md  mamba3_mlx.py  mlx_to_torch_ckpt.py  probe_layers.py  train_bilingual_cortex_lm.py  train_bilingual_mlx.py  train_counter_attach.py
data/: README.md
docs/: CLOUD_ARCHIVE.md  DIAGNOSTICS_PLAN.md  EVENT_CATALOG.md  EXPERIMENT_FIREBASE_SCHEMA.md  EXPERIMENT_REPORT.md  KAPPA_ARCHITECTURE.md  LAB_RUN_AND_BOOK.md  MODEL_CARD_PLAN.md  PARLIAMENT.md  PHASE_1_TO_4_PLAN.md  PLATFORM.md  REFACTOR_PLAN.md  STATELESS_ORCHESTRATOR_PLAN.md  UI_FIX_PLAN.md  UI_VISION.md  index.html  render_docs.py  training_strategies.html  training_strategies.md
docs/chess/: chess_browser_play.html  chess_lab.html
docs/findings/: cortex.md  ga_tournament.md  hanoi.md  lego.md  parity_rope.md  synapse.md
docs/introduction/: index.html
docs/lab_book/: index.html  manifest.json
docs/legacy/: BOOTSTRAP.md  CURRICULUM.md  DEPLOYMENT.md  HARNESS_HANDOFF.md  MAC_LAYOUT.md  MAP.md  PLAN.md  REPAIRS.md
docs/parliament/: index.html
docs/transcripts/: DeepSeq 4.txt  README.md
engine/ptx/: Cargo.toml  PLAN.md  PLAN_V2.md  PLAN_V3.md  README.md  REGISTER_STATE_HOOKS.md  findings.md  scheduler_telemetry.md
engine/ptx-bench/: Cargo.toml
engine/ptx-bench/src/: main.rs  matmul.ptx
engine/ptx/examples/: submit_to_ptxd.py
engine/ptx/scripts/: test_ptxd_full.sh  test_ptxd_quick.sh  test_ptxd_resilient.sh
engine/ptx/src/: batch_format.rs  lib.rs  model.rs  runtime.rs  scheduler.rs  scratch.rs  train_scratch.rs  trainer.rs
engine/ptx/src/ptx/: kernels.cu
engine/wgpu/: Cargo.toml  GPU_PERFORMANCE.md
engine/wgpu/src/: backward.rs  gpu_full.rs  gpu_model.rs  gpu_pipeline.rs  lib.rs  main.rs  model.rs  scan.rs  train.rs
engine/wgpu/src/shaders/: fused_layer.wgsl  head_reduce.wgsl  layer_norm.wgsl  matmul.wgsl  raw_bench.wgsl  residual_add.wgsl  silu_gate.wgsl  ssm_prep.wgsl  ssm_preprocess.wgsl
experiments/: operator_curriculum_lib.py
experiments/01_ga_tournament/: README.md  crack_mod3.py  crack_mod3_v2.py  distill.py  exp_augmented_survey.py  exp_augmented_vs_plain.py  exp_multitask.py  finetune_hanoi_to_gcd.py  length_generalization.py  mac_sweep.py  progressive_model.py  selective_copy.py  specialist_trainer.py  three_populations.py  train_bootstrap.py  train_progressive.py
experiments/02_ptx_engine/: README.md  README_engine_top.md
experiments/03_synapse_parity/: README.md  ablation_parity.py  mamba3_augmented.py  parity_experiment.py  probe_phase.py  synapse.py
export/: __init__.py  gguf_export.py  mamba_inference.py  rust_export.py
generators/: boss_tasks.py  level0_patterns.py  level1_reasoning.py  level2_composition.py  level3_longrange.py  teacher.py
handoff/: 2026-04-28-mlx-port-and-experiments-queued.md
jepa/: README.md  __init__.py  cortex_counting.py  eval_daemon.py  findings.md  make_teacher_thoughts.py  talk.py  train.py
mcp/: __init__.py  server.py
parliament/: proposal_schema.json  schema.md
registry/: __init__.py  model_registry.py  mutation_registry.py  mutations.yaml  problem_registry.py  seed_configs.yaml
rlf_cortex/: README.md  __init__.py  arch.py  cerebras_corpus.py  data_loader.py  findings.md  make_teacher_thoughts.py  ssm_triton_kernel.py  train.py
seeds/: README.md  phase1_1_hanoi.jsonl  phase1_2_propositional_logic.jsonl  phase1_3_variable_tracing.jsonl  phase1_4_sets_sequences.jsonl  phase1_5_algorithm_traces.jsonl
server/: __init__.py  node_agent.py  push_state.py
signoff/: 2026-04-28-mlx-port-and-experiments-queued.md  2026-04-29-bilingual-five-tool-harness-and-honest-composition.md  2026-04-29-cortex-counter-attach-on-bilingual-lm.md  2026-04-30-kappa-architecture-and-widerN-experiment.md
tests/: test_parliament.py  test_smoke.py
tools/: bench_scan.py  check_flicker.py  check_gpu_data.py  check_realtime.py  debug_mamba3.py  generate_lab_book_manifest.py  hot_plug_test.py  install_parliament_schedule.py  parliament.py  parliament_action.py  parliament_bill.py  parliament_event_listener.py  parliament_event_loop.py  parliament_tick.py  parliament_watchdog.py  register_inspector.py  render.py  run_parliament_schedule_loop.sh  run_survey.sh  serve.py  serve_dashboard.sh  serve_local.sh  status.py  test_register_sizes.py
(+327 files in other folders)
