[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mamba-platform"
version = "0.1.0"
description = "Mamba-3 training platform — GA-optimized SSM specialists"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
gpu = ["triton>=2.0"]
jepa = [
    "transformers>=4.40",
    "accelerate>=0.30",
    "sentencepiece>=0.2",
    "numpy>=1.24",
]

[project.scripts]
mamba = "cli.main:main"

[tool.setuptools.packages.find]
include = ["cli*", "registry*", "server*", "generators*"]
