[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lab-platform"
version = "0.1.0"
description = "Lab research platform — GA-optimized SSM specialists"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "pyyaml>=6.0",
    "python-chess>=1.999",
    # Persistence + archive layer (HF buckets, Kappa packer)
    "huggingface_hub>=1.0",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
gpu = ["triton>=2.0"]
jepa = [
    "transformers>=4.40",
    "accelerate>=0.30",
    "sentencepiece>=0.2",
    "numpy>=1.24",
]
jepa_structured_data = [
    "boto3>=1.34",
]
browser_export = [
    "onnx>=1.21",
    "onnxscript>=0.7",
    "onnxruntime>=1.25",
]

[project.scripts]
lab = "cli.main:main"
lab-kappa-pack = "lab_platform.kappa_packer:main"
lab-session-archive = "lab_platform.session_archiver:main"
lab-book = "lab_platform.lab_book:main"
lab-cluster-dispatch = "lab_platform.cluster_dispatch:main"
lab-cluster-sync = "lab_platform.cluster_sync:main"
lab-make-bilingual-corpus = "lab_platform.make_bilingual_corpus:main"
lab-make-opensubtitles-corpus = "lab_platform.make_opensubtitles_corpus:main"
lab-make-teacher-corpus = "lab_platform.make_teacher_corpus:main"

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["cli*", "registry*", "server*", "generators*", "lab_platform*"]
