[package]
name = "ptx-bench"
version = "0.1.0"
edition = "2021"
description = "Hand-written PTX matmul benchmark for H100 — showcases raw compute without CUDA runtime precision quirks"

[[bin]]
name = "ptx-bench"
path = "src/main.rs"

[dependencies]
cudarc = { version = "0.16", default-features = false, features = ["std", "driver", "cuda-version-from-build-system"] }
