[package]
name = "ptx-engine"
version = "0.1.0"
edition = "2021"
description = "Hand-written PTX Mamba-3 engine for NVIDIA H100. Bit-exact vs CPU reference."

[lib]
name = "ptx_engine"
path = "src/lib.rs"

[[bin]]
name = "ptx-engine"
path = "src/bin/main.rs"

[[bin]]
name = "test-train-kernels"
path = "src/bin/test_train_kernels.rs"

[[bin]]
name = "test-forward-cached"
path = "src/bin/test_forward_cached.rs"

[[bin]]
name = "test-train-step"
path = "src/bin/test_train_step.rs"

[[bin]]
name = "test-parity-train"
path = "src/bin/test_parity_train.rs"

[[bin]]
name = "ptxd"
path = "src/bin/ptxd.rs"

[[bin]]
name = "fd-check"
path = "src/bin/fd_check.rs"

[[bin]]
name = "forward-parity"
path = "src/bin/forward_parity.rs"

[[bin]]
name = "single-step-check"
path = "src/bin/single_step_check.rs"

[[bin]]
name = "parity-replay"
path = "src/bin/parity_replay.rs"

[[bin]]
name = "test-scheduler"
path = "src/bin/test_scheduler.rs"

[[bin]]
name = "test-parity-accuracy"
path = "src/bin/test_parity_accuracy.rs"

[dependencies]
mamba3-engine = { path = "../wgpu" }
cudarc = { version = "0.16", default-features = false, features = ["std", "driver", "nvrtc", "cuda-version-from-build-system", "dynamic-linking"] }
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
